--- a/k8s_env_setup/ingress.yml
+++ b/k8s_env_setup/ingress.yml
@@ -9,16 +9,9 @@ spec:
   - hosts:
     - kraeja.com
     - ping.kraeja.com
+    - storage.kraeja.com
     secretName: tls-secret
   rules:
-  - host: ping.kraeja.com
-    http:
-      paths:
-      - pathType: Prefix
-        path: /
-        backend:
-          serviceName: ping-service
-          servicePort: 5678
   - host: kraeja.com
     http:
       paths:
@@ -27,3 +20,19 @@ spec:
         backend:
           serviceName: home-service
           servicePort: 5678
+  - host: ping.kraeja.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          serviceName: ping-service
+          servicePort: 5678
+  - host: storage.kraeja.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          serviceName: storage-service
+          servicePort: 23011
