--- a/ingress.yml
+++ b/ingress.yml
@@ -10,6 +10,7 @@ spec:
     - kraeja.com
     - www.kraeja.com
     - ping.kraeja.com
+    - front.kraeja.com
     - storage.kraeja.com
     - object-detection.kraeja.com
     secretName: tls-secret
@@ -38,6 +39,14 @@ spec:
         backend:
           serviceName: ping-service
           servicePort: 5678
+  - host: front.kraeja.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          serviceName: front-service
+          servicePort: 8080
   - host: storage.kraeja.com
     http:
       paths:
