--- a/services/object_detection.yml
+++ b/services/object_detection.yml
@@ -16,7 +16,7 @@ spec:
     - name: PORT
       value: "8080"
     - name: MODEL_PATH
-      value: "/models/base_model_v6.h5"
+      value: "/models/model.h5"
     volumeMounts:
       - name: models
         mountPath: /models  # in the container filesystem
