--- a/ingress.yml
+++ b/ingress.yml
@@ -9,7 +9,7 @@ spec:
   - hosts:
     - kraeja.com
     - www.kraeja.com
-    - ping.kraeja.com
+    - echo.kraeja.com
     - front.kraeja.com
     - storage.kraeja.com
     - object-detection.kraeja.com
@@ -31,14 +31,14 @@ spec:
         backend:
           serviceName: home-service
           servicePort: 5678
-  - host: ping.kraeja.com
+  - host: echo.kraeja.com
     http:
       paths:
       - pathType: Prefix
         path: /
         backend:
-          serviceName: ping-service
-          servicePort: 5678
+          serviceName: echo-service
+          servicePort: 8080
   - host: front.kraeja.com
     http:
       paths:
